<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_match_day"
            android:icon="@drawable/ic_today"
            android:title="@string/match_day" />

        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_events"
            android:title="@string/result" />

        <item
            android:id="@+id/nav_league_table"
            android:icon="@drawable/ic_table_chart"
            android:title="@string/league_table" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_remove_circle"
            android:title="@string/log_out" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />

    </group>

</menu>