<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="4dp"
    android:paddingEnd="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sn"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/meiryo_ui_w53_regular"
            android:maxLength="2"
            android:text="@string/_1"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/participantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:fontFamily="@font/meiryo_ui_w53_regular"
            android:maxLines="1"
            android:text="@string/participant"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/skillLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/meiryo_ui_w53_regular"
            android:maxLines="1"
            android:text="@string/_00"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/scores_goals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/meiryo_ui_w53_regular"
            android:maxLines="1"
            android:text="@string/_00"
            android:textSize="17sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>