<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".LoginActivity">

            <ImageView
                android:id="@+id/xkonarate_image"
                android:layout_width="267dp"
                android:layout_height="239dp"
                android:contentDescription="@string/xkoranate_image"
                android:src="@drawable/signature_xkoranate_20p8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xkonarate_image" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:inputType="textNoSuggestions|textPersonName"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/passwordLoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameTextLayout" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLoginTextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpButtonForLoginActivity"
                    style="@style/ButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/sign_up"
                    app:cornerRadius="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/ButtonElevatedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:text="@string/login"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

